# self-learning

./: .gitignore  CHROMARETRIEVER_INTEGRATION.md  README.md  SPEED_OPTIMIZATION_GUIDE.md  all_collections.json  chromadb_complete_info.json  docker-compose.yml  launch_gradio.py  main.py  minimal_chroma_check.py  pyproject.toml  quick_chroma_check.py
.claude/: settings.local.json
backend/: PREFECT_INSTRUCTIONS.md  filename_mapping.json
backend/agentic_system/: __init__.py
backend/agentic_system/agentic_lightrag/: gradio_interface_simplified.py
backend/agentic_system/agentic_lightrag/graph/: main.py  state.py  ultra_fast_workflow.py
backend/chat_history/: __init__.py  chat_history_manager.py  example_usage.py
backend/chat_history/crud/: __init__.py  base_crud.py  message_crud.py  session_crud.py  user_crud.py
backend/chat_history/database/: __init__.py  connection.py  schema.sql
backend/chat_history/models/: __init__.py  message.py  session.py  user.py
backend/document_processing/: __init__.py
backend/document_processing/local_mineru/chunker/: __init__.py  example_usage.py  semantic_chunker.py
backend/document_processing/local_mineru/file_ingesting/: __init__.py  mineru_ingestor.py
backend/document_processing/local_mineru/pipelines/: __init__.py  pdf_to_enriched_semantic_chunks_pipeline.py
backend/document_processing/local_mineru/vlm_enhancing/: README.md  __init__.py  example_usage.py  vlm_pipeline.py
backend/document_processing/video_transcription/: __init__.py  extract_transcripts.py  models.py  playlist_sources.json  video_transcription_manager.py
backend/document_processing/video_transcription/components/: __init__.py  transcript_extractor.py
backend/document_processing/video_transcription/utils/: __init__.py  playlist_loader.py
backend/orchestration/: __init__.py  clean_prefect_orchestrator.py  pipeline_dataflow.puml  prefect_flows.py  prefect_pipeline_orchestrator.py  run_pipeline_stage.py
backend/orchestration/tasks/: __init__.py  chunking_file_tasks.py  ingestion_file_tasks.py  ingestion_tasks.py  kafka_message_utils.py  pdf_processing_file_tasks.py  processing_tasks.py  transcription_tasks.py  validation_tasks.py  vlm_enhancement_file_tasks.py
backend/orchestration/utils/: __init__.py  file_validation_utils.py  pipeline_config.py
backend/pumls/: agentic_system_detailed.puml  agentic_system_overview.puml  chromadb_retrieval_architecture.puml  chromadb_retrieval_architecture_accurate.puml  pipeline_dataflow_accurate.puml
backend/storage/: __init__.py  chromadb_info_extractor.py  database_info.json
backend/storage/chromadb_instance/: __init__.py  chromadb_manager.py  test_retriever.py
backend/storage/chromadb_instance/components/: __init__.py  chroma_ingestion_engine.py  chroma_retriever.py  embedding_manager.py  reranker.py  result_formatter.py
backend/storage/chromadb_instance/models/: __init__.py  chroma_config.py  search_result.py
backend/storage/chromadb_storage/c869a607-c8df-4bdb-a935-6dc5f9be407f/: index_metadata.pickle
backend/storage/output_data/output_books/: video_transcripts.json
backend/utils/: __init__.py  file_management_utils.py  mineru_processing_utils.py  vlm_enhancement_utils.py
(+115 files in other folders)
